[gd_scene load_steps=4 format=3 uid="uid://p5lo2nscjbp4"]

[ext_resource type="Script" uid="uid://deevi2wv54i6k" path="res://存储测试/test.gd" id="1_myinc"]
[ext_resource type="Script" uid="uid://bmlv1mxb7pkn5" path="res://存储测试/label_2.gd" id="2_njov2"]

[sub_resource type="GDScript" id="GDScript_myinc"]
resource_name = "测试内置脚本"
script/source = "extends Label
class_name LeiSc
## 内置脚本class_name 无法全局用
"

[node name="Test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myinc")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "保存"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 10.0
offset_right = 108.0
offset_bottom = 41.0
text = "加载"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 65.0
offset_right = 53.0
offset_bottom = 88.0
text = "hddx"
script = SubResource("GDScript_myinc")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("2_njov2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "1"

[node name="Label2" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "2"

[node name="Label3" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "3"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
